# RNN-Tester

./: .gitignore  CHANGELOG  README.md  setup.cfg  tox.ini
.github/workflows/: tox.yml
src/: rnn_tester.py  rnn_tester_test.py
src/rnn_tester/: dieharder.py  learn.py  rnn_tester.py  window_generator.py
src/weakrandom/: Makefile  README.md  RandomInteger.java  arc4random.py  arc4random_test.py  crand.c  libweakrandom.py  libweakrandom_test.py  weakrandom.py  weakrandom_test.py
tests/: dieharder_test.py  window_generator_test.py
