[metadata]
name = rnn-tester
version = 0.0.2
description = A tool for testing random numbers with AI
long_description = file: README.md CHANGELOG
authors = Tilo Fischer
license = GPLv3
url = https://github.com/C2yp71c/RNN-Tester
keywords = rng testing rnn ai cryptanalyse

classifiers =
    	Development Status :: 3 - Alpha
        Intended Audience :: Cryptographer
        Topic :: Testing :: RNG :: RNN
        License :: OSI Approved :: GPLv3 License
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9

[options]
install_requires =
        tensorflow==2.8
        numpy
package_dir=
    rnn_tester=src/rnn_tester
packages = find:
include_package_data = True

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
	rnn_tester= rnn_tester.rnn_tester:main

[options.extras_require]
dev =
